# windows-converter

./: .gitignore  HISTORY.md  justfile  main.py  pyproject.toml  requirements.txt
src/data/: build_exe.py  installforge.ifp  justfile  pyinstaller.py  pyinstaller_backend.py  pyproject.toml
src/windows_converter/: __init__.py  build.py  config.py  constants.py  main.py  main_menu.py  module_caller.py  modules.py  projects.py  root.py  text.py  utilities.py
src/windows_converter/forms/: frm_config.py  frm_main.py  frm_project.py
tests/: test_project.py
tests/test_data/: config.toml  minimal-app_proof.ifp  projects.json  pyinstaller_proof.py  pyproject_proof.toml
tests/test_data/windows-projects/minimal_app/minimal_app/src/: main.py
tests/test_data/xxx/: minimal-app.ifp  minimal-app_local.ifp  minimal-app_local_str_clean.ifp  minimal-app_str.ifp
