[project]
name = "windows-converter"
version = "0.1.0"
description = "Prepare an application for Windows conversion."
authors = [{name = "Jeff", "email" = "<jeffwatkins2000@gmail.com>"}]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "appdirs>=1.4.4",
    "icecream>=2.1.7",
    "psiutils>=0.2.3",
    "structlog>=25.4.0",
]

[dependency-groups]
dev = ['pytest']

[build-system]
requires = ['uv-build']
build-backend = 'uv_build'
