[tool.poetry]
name = "<project>"
version = "<version>"
description = "<description>"
authors = ["<author>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
build = "src.pyinstaller:install"
